tests/NormalTests/paczka1/small_fuzzy/53025242.err
Error in line 1: S126 A185 95,32
Error in line 13: F18quQE A478 116,4
